SDK/C/TitanEngine.h


__declspec(dllexport) bool TITCALL ExtensionManagerDisableAllPlugins();

__declspec(dllexport) bool TITCALL ExtensionManagerDisablePlugin(char* szPluginName);

__declspec(dllexport) bool TITCALL ExtensionManagerEnableAllPlugins();

__declspec(dllexport) bool TITCALL ExtensionManagerEnablePlugin(char* szPluginName);

__declspec(dllexport) bool TITCALL ExtensionManagerUnloadAllPlugins();

__declspec(dllexport) bool TITCALL ExtensionManagerUnloadPlugin(char* szPluginName);

__declspec(dllexport) void* TITCALL ExtensionManagerGetPluginInfo(char* szPluginName);