SDK/Delphi/TitanEngine.pas

  function ExtensionManagerDisableAllPlugins():boolean; stdcall;  external 'TitanEngine.dll' name 'ExtensionManagerDisableAllPlugins';
  function ExtensionManagerDisablePlugin(szPluginName:PAnsiChar):boolean; stdcall;  external 'TitanEngine.dll' name 'ExtensionManagerDisablePlugin';
  function ExtensionManagerEnableAllPlugins():boolean; stdcall;  external 'TitanEngine.dll' name 'ExtensionManagerEnableAllPlugins';
  function ExtensionManagerEnablePlugin(szPluginName:PAnsiChar):boolean; stdcall;  external 'TitanEngine.dll' name 'ExtensionManagerEnablePlugin';
  function ExtensionManagerUnloadAllPlugins():boolean; stdcall;  external 'TitanEngine.dll' name 'ExtensionManagerUnloadAllPlugins';
  function ExtensionManagerUnloadPlugin(szPluginName:PAnsiChar):boolean; stdcall;  external 'TitanEngine.dll' name 'ExtensionManagerUnloadPlugin';
  function ExtensionManagerGetPluginInfo(szPluginName:PAnsiChar):Pointer; stdcall;  external 'TitanEngine.dll' name 'ExtensionManagerGetPluginInfo';

implementation

end.
